--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.12.2
   geolocator: ^14.0.2
+  flutter_google_places_sdk: ^0.3.10
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
